<resources>
    <string name="app_name">Li_Alvar</string>
    <string name="find_child">Find Child</string>
    <string name="add_child">Add Child</string>
    <string name="search_hint" />
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_bdate">Date of Birth</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_province">Province</string>
    <string name="hint_postalCode">Postal Code</string>
    <string name="hint_country">Country</string>
    <string name="hint_lat">Latitude</string>
    <string name="hint_lng">Longitude</string>
    <string name="hint_isNaughty">Naughty?</string>
    <string name="input_submit">Submit</string>
    <string name="input_cancel">Cancel</string>
    <string name="view_naughty">View Naughty</string>
    <string name="view_nice">View Nice</string>
    <string name="view_all">View All</string>
    <string name="clear_list">Clear List</string>
    <string name="edit_child">Edit Child</string>
    <string name="delete_child">Delete Child</string>
    <string name="text_credits"><![CDATA[Created By: Jacky Li & Viktor Alvar]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
</resources>
