<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddChildActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddChildActivity">

        <include
            android:id="@+id/appbar_id"
            layout="@layout/app_bar" />

        <EditText
            android:id="@+id/input_fname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_firstName"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_lname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_lastName"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_bdate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_bdate"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_street"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_street"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_city"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_city"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_province"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_province"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_postalCode"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_postalCode"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_country"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint_country"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_lat"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/hint_lat"
            android:imeOptions="flagNoExtractUi"
            />
        <EditText
            android:id="@+id/input_lng"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/hint_lng"
            android:imeOptions="flagNoExtractUi"
            />

        <CheckBox
            android:id="@+id/input_isNaughty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_isNaughty"
            android:checked="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_submit"
                android:onClick="onClickSubmit"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_cancel"
                android:onClick="onClickCancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>